# sparselizard

./: .gitignore  CMakeLists.txt
simulations/: CMakeLists.txt
simulations/tracks_electrostatic/: CMakeLists.txt  main.cpp  pcb_TrackV2.msh  pcb_trac_geom.py  pcb_track.geo_unrolled  pcb_track.msh2  pcb_track.msh3
